Added hr to portfolio for 780 and 1200 screens, changed margins for hr on 1200

--- a/css/main.css
+++ b/css/main.css
@@ -509,9 +509,9 @@ footer .copyright {
   }
 
 
-  .header-divider {
-    display: none;
-  }
+  /* .header-divider { */
+    /* display: none; */
+  /* } */
 
     /** Hero Area **/
 
@@ -609,6 +609,10 @@ p {
 }
 
   /** Portfolio-area **/
+
+.portfolio-area .header-divider {
+  margin: 10px 0 10px 0;
+}
 
 .portfolio-area article {
   display: flex;
