--- a/css/main.css
+++ b/css/main.css
@@ -119,14 +119,16 @@ h1, h2, h3 {
   margin: 0;
 }
 
-h3 {
-  font-size: 1.5em;
+h2 {
+  font-size: 2.5em;
   font-weight: 400;
 }
 
 h4 {
   font-size: 1.25em;
+  margin: 0;
 }
+
 p {
   font-size: 1em;
   line-height: 1.285;
@@ -203,56 +205,82 @@ header nav ul li {
   font-size: 1.125em;
 }
 
+#skills, #about, #contact {
+  width: 100%;
+}
+
 footer {
+  display: flex;
   flex-direction: column;
   text-align: center;
+  padding-top: 30px;
+  padding-bottom: 40px;
+}
+
+footer .contact-wrapper {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 0;
+  width: 100%;
+}
+
+footer .contact-info {
+  margin-bottom: 50px;
 }
 
 footer .content-wrapper {
-  width: 100%;
-  margin: 50px 0;
-}
-
-footer .contact {
-  margin-bottom: 50px;
+  margin: 0;
 }
 
 footer h2 {
   color: #c79d2f;
   font-weight: 400;
+  padding-bottom: 40px;
 }
 
 footer h4 {
   font-size: 1.125em;
   font-weight: 700;
-  margin-bottom: 10px;
+  padding-bottom: 30px;
 }
 footer p {
   color: #dddddd;
   margin: 0;
 }
 
+footer ul {
+  width: 100%;
+}
+
+footer .follow-section {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
 footer .social {
   margin-bottom: 50px;
 }
 
-footer .social-icons p i {
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+}
+
+footer .social-icons li i {
   font-size: 1.3em;
 }
 
-footer .social-icons p {
+footer .social-icons li {
   background-color: #c79d2f;
   border-radius: 50%;
   height: 40px;
+  list-style-type: none;
   width: 40px;
   display: flex;
   justify-content: center;
-  align-items: center;
-}
-
-footer .social-icons {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -317,7 +345,7 @@ footer .copyright {
   margin: 0 70px 40px 70px;
 }
 
-.portfolio-area h3 {
+.portfolio-area h2 {
   color: #c79d2f;
   text-align: center;
   margin-bottom: 30px;
@@ -340,6 +368,51 @@ footer .copyright {
   flex-flow: column-reverse;
 }
 
+/* ---- Skills Area ----*/
+
+.skills-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 40px;
+}
+
+.skills-area .content-wrapper {
+  width: 85%;
+  margin: 30px 0;
+}
+
+.skills-area h2 {
+  color: #c79d2f;
+  text-align: center;
+  line-height: 1;
+  width: 100%;
+}
+
+.skills-area h4 {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.language-wrapper, .tool-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  flex-flow: row wrap;
+  text-transform: uppercase;
+}
+
+.language-wrapper p, .tool-wrapper p {
+  color: #a13333;
+  line-height: 1.5;
+  margin: 20px 0;
+  padding: 15px 0;
+}
+
+
 /* ---- About Me ---- */
 
 .about-area {
@@ -352,12 +425,12 @@ footer .copyright {
 
 .about-area .content-wrapper {
   justify-content: center;
-  margin-top: 30px;
-  margin-bottom: 40px;
+  padding-top: 30px;
+  padding-bottom: 40px;
   width: 90%;
 }
 
-.about-area h3 {
+.about-area h2 {
   color: #c79d2f;
   text-align: center;
   padding-bottom: 20px;
@@ -468,7 +541,6 @@ footer .copyright {
   /******** Tablet styles here ********/
 
   .content-wrapper {
-    max-width: 640px;
     margin: 50px 0;
 }
 /* ==========================================================================
