--- a/css/main.css
+++ b/css/main.css
@@ -337,12 +337,22 @@ footer .copyright {
   margin: 10px 0 30px 0;
 }
 
+.portfolio-area .portfolio-piece {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
 .portfolio-area article {
   text-align: center;
 }
 
-.portfolio-area figure {
-  margin: 0 70px 40px 70px;
+.portfolio-piece figure {
+  width: 100%;
+  filter: drop-shadow(1px 2px 6px #c79d2f);
+  margin: 20px 0 40px 0;
 }
 
 .portfolio-area h2 {
@@ -553,7 +563,7 @@ footer .copyright {
   }
 
   h4 {
-    font-size: 1.3125;
+    font-size: 1.3125em;
     line-height: 1.25;
   }
     /** Header **/
