--- a/css/main.css
+++ b/css/main.css
@@ -89,13 +89,9 @@ textarea {
 
 /*--- General styles ---*/
 
-html {
-  font-size: 16px;
-}
-
 body {
   background-color: #262829;
-  font-size: 1em;
+  font-size: 1rem;
   font-family: 'Raleway', sans-serif;
   text-align: left;
 }
@@ -120,17 +116,17 @@ h1, h2, h3 {
 }
 
 h2 {
-  font-size: 2.5em;
+  font-size: 2.5rem;
   font-weight: 400;
 }
 
 h4 {
-  font-size: 1.25em;
+  font-size: 1.25rem;
   margin: 0;
 }
 
 p {
-  font-size: 1em;
+  font-size: 1rem;
   line-height: 1.285;
 }
 
@@ -148,7 +144,7 @@ address {
 
 .content-wrapper {
   width: 90%;
-  margin: 30px 0;
+  margin: 1.875rem 0;
 }
 
 /* ------------------------- Base Header - Footer Styles -------------------- */
@@ -161,11 +157,11 @@ header, footer {
 }
 
 header {
-  padding: 15px 0;
+  padding: 0.938rem 0;
   }
 
 header h3 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -190,7 +186,7 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
-  font-size: 1.125em;
+  font-size: 1.125rem;
   font-weight: 400;
   width: 100%;
  }
@@ -202,7 +198,7 @@ header nav ul {
  }
 
 header nav ul li {
-  font-size: 1.125em;
+  font-size: 1.125rem;
 }
 
 #skills, #about, #contact {
@@ -213,8 +209,8 @@ footer {
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding-top: 30px;
-  padding-bottom: 40px;
+  padding-top: 1.875rem;
+  padding-bottom: 2.5rem;
 }
 
 footer .contact-wrapper {
@@ -227,7 +223,7 @@ footer .contact-wrapper {
 }
 
 footer .contact-info {
-  margin-bottom: 50px;
+  margin-bottom: 3.125rem;
 }
 
 footer .content-wrapper {
@@ -237,13 +233,13 @@ footer .content-wrapper {
 footer h2 {
   color: #c79d2f;
   font-weight: 400;
-  padding-bottom: 40px;
+  padding-bottom: 2.5rem;
 }
 
 footer h4 {
-  font-size: 1.125em;
+  font-size: 1.125rem;
   font-weight: 700;
-  padding-bottom: 30px;
+  padding-bottom: 1.875rem;
 }
 footer p {
   color: #dddddd;
@@ -261,7 +257,7 @@ footer .follow-section {
 }
 
 footer .social {
-  margin-bottom: 50px;
+  margin-bottom: 3.125rem;
 }
 
 footer .social-icons {
@@ -270,27 +266,27 @@ footer .social-icons {
 }
 
 footer .social-icons li i {
-  font-size: 1.3em;
+  font-size: 1.3rem;
 }
 
 footer .social-icons li {
   background-color: #c79d2f;
   border-radius: 50%;
-  height: 40px;
+  height: 2.5rem;
   list-style-type: none;
-  width: 40px;
+  width: 2.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 footer .copyright {
-  margin: 20px 0;
+  margin: 1.25rem 0;
   width: 100%;
 }
 
 .copyright p {
-  font-size: 0.875em;
+  font-size: 0.875rem;
   line-height: 16.8px;
 }
 
@@ -316,7 +312,7 @@ footer .copyright {
   font-family: 'Signika Negative', Helvetica, Arial, sans-serif;
   font-weight: 600;
   line-height: 1.2;
-  margin: 50px;
+  margin: 3.125rem;
   width: 65%;
 }
 
@@ -334,7 +330,7 @@ footer .copyright {
 }
 
 .portfolio-area .header-divider {
-  margin: 10px 0 30px 0;
+  margin: .625rem 0 1.875rem 0;
 }
 
 .portfolio-area .portfolio-piece {
@@ -352,13 +348,13 @@ footer .copyright {
 .portfolio-piece figure {
   width: 100%;
   filter: drop-shadow(1px 2px 6px #c79d2f);
-  margin: 20px 0 40px 0;
+  margin: 1.250rem 0 2.5rem 0;
 }
 
 .portfolio-area h2 {
   color: #c79d2f;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
   line-height: 1;
   width: 100%;
 }
@@ -369,7 +365,7 @@ footer .copyright {
 
 .portfolio-area p {
   color: #dddddd;
-  font-size: .875em;
+  font-size: .875rem;
   margin-top: 0;
 }
 
@@ -386,13 +382,13 @@ footer .copyright {
   align-items: center;
   flex-flow: row wrap;
   width: 100%;
-  padding-top: 30px;
-  padding-bottom: 40px;
+  padding-top: 1.875rem;
+  padding-bottom: 2.5rem;
 }
 
 .skills-area .content-wrapper {
   width: 85%;
-  margin: 30px 0;
+  margin: 1.875rem 0;
 }
 
 .skills-area h2 {
@@ -403,7 +399,7 @@ footer .copyright {
 }
 
 .skills-area h4 {
-  margin-top: 20px;
+  margin-top: 1.25rem;
   text-align: center;
 }
 
@@ -418,8 +414,8 @@ footer .copyright {
 .language-wrapper p, .tool-wrapper p {
   color: #a13333;
   line-height: 1.5;
-  margin: 20px 0;
-  padding: 15px 0;
+  margin: 1.25rem 0;
+  padding: .938rem 0;
 }
 
 
@@ -454,7 +450,7 @@ footer .copyright {
 }
 
 .about-area p {
-  font-size: .875em;
+  font-size: .875rem;
   color: #262829;
   width: 70%
 }
@@ -558,12 +554,12 @@ footer .copyright {
   =========================================================================*/
 
   h3 {
-    font-size: 2em;
+    font-size: 2rem;
     line-height: 1.25;
   }
 
   h4 {
-    font-size: 1.3125em;
+    font-size: 1.3125rem;
     line-height: 1.25;
   }
     /** Header **/
@@ -587,7 +583,7 @@ footer .copyright {
   }
 
   header h3 {
-    font-size: 1.75em;
+    font-size: 1.75rem;
     width: 50%;
   }
 
@@ -607,7 +603,7 @@ footer .copyright {
   }
 
   .hero-area h1 {
-    font-size: 4.25em;
+    font-size: 4.25rem;
     line-height: 1.333;
     margin-top: 100px;
   }
@@ -653,7 +649,7 @@ footer .copyright {
   }
 
   .about-area p {
-    font-size: 1em;
+    font-size: 1rem;
     color: #262829;
   }
 
@@ -676,15 +672,15 @@ header .content-wrapper {
 }
 
 h3 {
-  font-size: 2em;
+  font-size: 2rem;
 }
 
 h4 {
-  font-size: 1.75em;
+  font-size: 1.75rem;
 }
 
 p {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   line-height: 1.333;
 }
 
