--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,10 @@ textarea {
 
 /*--- General styles ---*/
 
+html {
+  font-size: 16px;
+}
+
 body {
   background-color: #262829;
   font-size: 1rem;
@@ -102,12 +106,13 @@ ul, ol {
   padding: 0;
 }
 
-h1, h2, h3, h4, a {
+a {
   color: #dddddd;
+  text-decoration: none;
 }
 
-a {
-  text-decoration: none;
+h1, h2, h3, h4 {
+  color: #dddddd;
 }
 
 h1, h2, h3 {
@@ -128,6 +133,10 @@ p {
   line-height: 1.285;
 }
 
+span {
+  font-weight: bold;
+}
+
 img {
   width: 100%;
 }
@@ -140,6 +149,33 @@ address {
   font-style: normal;
 }
 
+.project-link,
+.language-wrapper p,
+.tool-wrapper p {
+  text-transform: uppercase;
+  font-size: 1.125rem;
+}
+
+/* Structural Styles */
+header,
+#portfolio,
+#skills,
+#about,
+footer {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-flow: row wrap;
+}
+
+.content-wrapper {
+  width: 90%;
+}
+
+#portfolio p, #about p {
+  width: 100%;
+  text-align: left;
+}
 /* Zero all margins */
 
 h1, h2, h3, h4 {
@@ -150,15 +186,48 @@ p {
   margin: 0;
 }
 
-/* Now set margins to required values */
+/* Now set margin and paddings to required values for any element */
 
-.preview {
-  margin: 40px 0 40px 0;
+#portfolio {
+  padding-top: 60px;
 }
 
-.content-wrapper {
-  width: 90%;
-  margin: 1.875rem 0;
+#skills {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+#about {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+figure {
+  margin: 20px 0 40px 0;
+}
+
+footer {
+  padding: 80px 0;
+}
+
+h2 {
+  margin-top: 60px;
+}
+
+h3 {
+  margin-bottom: 20px;
+}
+
+h4 {
+  margin: 0 0 40px 0;
+}
+
+.project-description {
+  margin: 0 0 30px 0;
+}
+
+.project-link {
+  margin: 40px 0 60px 0;
 }
 
 /* ------------------------- Base Header - Footer Styles -------------------- */
@@ -213,10 +282,6 @@ header nav ul {
 
 header nav ul li {
   font-size: 1.125rem;
-}
-
-#skills, #about, #contact {
-  width: 100%;
 }
 
 footer {
@@ -336,10 +401,6 @@ footer .copyright {
 
 /* ---- Portfolio Area ---- */
 
-.project-description {
-  margin: 0 0 30px 0;
-}
-
 .portfolio-area {
   display: flex;
   justify-content: center;
@@ -354,10 +415,6 @@ footer .copyright {
 
 .portfolio-area .header-divider {
   margin: .625rem 0 1.875rem 0;
-}
-
-.portfolio-area .preview {
-  margin: 40px 0 40px 0;
 }
 
 .portfolio-piece {
@@ -378,7 +435,7 @@ footer .copyright {
   margin: 1.250rem 0 2.5rem 0;
 }
 
-.portfolio-area h2 {
+#portfolio h2 {
   color: #c79d2f;
   text-align: center;
   margin-bottom: 1.875rem;
@@ -386,36 +443,32 @@ footer .copyright {
   width: 100%;
 }
 
-.portfolio-area h4 {
+#portfolio h4 {
   margin: 0;
 }
 
-.portfolio-area p {
+#portfolio p {
   text-align: left;
   color: #dddddd;
   font-size: .875rem;
   width: 100%;
 }
 
-button {
-  font-family: 'Raleway', sans-serif;
-  font-size: 1.25rem;
-  font-weight: bold;
+.project-description {
+  margin: 0 0 30px 0;
 }
 
-.preview-link {
-  padding: .625rem 1.25rem;
+.project-link {
+  padding: .75rem 3.75rem;
   border-radius: 30px;
-  border: 0;
   align-self: center;
-  margin: 40px 0 40px 0;
   color: #c79d2f ;
   background: #262829;
   outline: none;
   cursor: pointer;
 }
 
-.preview-link:hover {
+.project-link:hover {
   background-color: #dddddd;
   color: #a13333;
 }
@@ -432,10 +485,10 @@ button {
   padding-bottom: 2.5rem;
 }
 
-.skills-area .content-wrapper {
+/* .skills-area .content-wrapper {
   width: 85%;
   margin: 1.875rem 0;
-}
+}  */
 
 .skills-area h2 {
   color: #c79d2f;
@@ -445,25 +498,33 @@ button {
 }
 
 .skills-area h4 {
-  margin-top: 1.25rem;
-  text-align: center;
+  margin-top: 40px 0 40px 0;
+  font-weight: bold;
+  text-align: center; */
 }
 
-.language-wrapper, .tool-wrapper {
+/* .language-wrapper, .tool-wrapper {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
   flex-flow: row wrap;
   text-transform: uppercase;
-}
+} */
 
 .language-wrapper p, .tool-wrapper p {
   color: #a13333;
   line-height: 1.5;
-  margin: 1.25rem 0;
-  padding: .938rem 0;
+  margin: 20px 0;
+  padding: 15px 0;
 }
 
+.skill {
+  width: 100%;
+}
+
+.tool {
+  width: 100%;
+}
 
 /* ---- About Me ---- */
 
