Added a :hover color for the nav links

--- a/css/main.css
+++ b/css/main.css
@@ -291,6 +291,10 @@ header nav ul li {
   font-size: 1.125rem;
 }
 
+ul li a:hover {
+  color: #c79d2f;
+}
+
 footer {
   display: flex;
   flex-direction: column;
