--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,7 @@ address {
 .tool-wrapper p {
   text-transform: uppercase;
   font-size: 1.125rem;
+  word-spacing: .25rem;
 }
 
 .project-link {
