--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@ h1 {
 }
 
 h2 {
-  font-size: 1.25rem;
+  font-size: 2rem;
   font-weight: 400;
   line-height: 1.5;
 }
@@ -227,7 +227,7 @@ figure {
 }
 
 footer {
-  padding: 80px 0;
+  padding: 60px 0;
 }
 
 h2 {
@@ -270,7 +270,7 @@ h4 {
   margin: 40px 0 40px 0;
 }
 
-/* ------------------------- Base Header - Footer Styles -------------------- */
+/* ------------------------- Base Header Styles -------------------- */
 
 header, footer {
   display: flex;
@@ -282,10 +282,6 @@ header, footer {
 header {
   padding: 30px 0 60px 0;
   }
-
-/* nav {
-    margin-bottom: 60px;
-} */
 
 header h3 {
   margin-top: 0;
@@ -331,86 +327,7 @@ ul li a:hover {
   color: #c79d2f;
 }
 
-footer {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding: 80px 0;
-}
 
-footer .contact-wrapper {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: flex-start;
-  margin: 0;
-  width: 100%;
-}
-
-footer .contact-info {
-  margin: 0 0 60px 0;
-}
-
-footer h2 {
-  color: #c79d2f;
-  font-weight: 400;
-  padding-bottom: 2.5rem;
-}
-
-footer h4 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  padding-bottom: 1rem;
-}
-
-footer p {
-  color: #dddddd;
-  margin: 0;
-}
-
-footer ul {
-  width: 100%;
-}
-
-footer .follow-section {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-}
-
-footer .social {
-  margin-bottom: 3.125rem;
-}
-
-footer .social-icons {
-  display: flex;
-  justify-content: space-around;
-}
-
-footer .social-icons li i {
-  font-size: 1.875rem;
-}
-
-footer .social-icons li {
-  background-color: #c79d2f;
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-footer .copyright {
-  margin: 1.25rem 0;
-  width: 100%;
-}
-
-.copyright p {
-  font-size: 0.875rem;
-  line-height: 16.8px;
-}
 
 /* ==================== Mobile styles - Homepage ==================== */
 
@@ -557,6 +474,88 @@ footer .copyright {
 .about-area h4 {
   color: #262829;
   text-align: left;
+}
+
+/* ------------------------ Base Footer Styles ------------------------- */
+
+footer {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+footer .contact-wrapper {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 0;
+  width: 100%;
+}
+
+footer .contact-info {
+  margin: 0 0 60px 0;
+}
+
+footer h2 {
+  color: #c79d2f;
+  font-weight: 400;
+  padding-bottom: 2.5rem;
+}
+
+footer h4 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  padding-bottom: 1rem;
+}
+
+footer p {
+  color: #dddddd;
+  margin: 0;
+}
+
+footer ul {
+  width: 100%;
+}
+
+footer .follow-section {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+footer .social {
+  margin-bottom: 3.125rem;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+}
+
+footer .social-icons li i {
+  font-size: 1.875rem;
+}
+
+footer .social-icons li {
+  background-color: #c79d2f;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .copyright {
+  margin: 1.25rem 0;
+  width: 100%;
+}
+
+.copyright p {
+  font-size: 0.875rem;
+  line-height: 16.8px;
 }
 
 /* ==========================================================================
